Fixed author page wrap

--- a/scss/modules/_front-cover.scss
+++ b/scss/modules/_front-cover.scss
@@ -132,25 +132,42 @@ body {
 .purchase-kara .col {
   margin-top: 1em;
   & .btn {
-		width: 100%;
-	}
+    width: 100%;
+  }
 }
 @include breakpoint(md) .purchase-kara .btn {
-	width: auto;
+  width: auto;
 }
 #block-aboutbeccahillburn, #block-aboutbeccahillburn-2 {
-    position: relative;
-    width: 100%;
-    text-align: center;
-    color: #fff;
-    background-repeat: no-repeat;
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    padding: 100px 0;
-    margin: -50px auto;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  padding: 100px 0;
+  margin: -50px auto;
+  & .fa-comment {
+    color: rgba(73,69,66,0.8);
+    font-size: 340px;
+    margin-top: -230px;
+  }
+  & h1 {
+    color: #9bd59b;
+  }
+  & .bigtext-line0, & .bigtext-line1, & .bigtext-line2, & .bigtext-line4 {
+    line-height: 70%;
+  }
+  & .bigtext-line0, & .bigtext-line1 {
+    &, span {
+      font-family: $header-font;
+    }
+  }
 }
 @media(max-width:767px) {
   .kara-title .title-ribbon {
@@ -212,25 +229,6 @@ footer .fa:hover {
 }
 #beccaHillburnTweet .user, #beccaHillburnTweet .timePosted, #beccaHillburnTweet .interact {
   display: none;
-}
-#block-aboutbeccahillburn, #block-aboutbeccahillburn-2 {
-	overflow: hidden;
-  & .fa-comment {
-    color: rgba(73,69,66,0.8);
-    font-size: 340px;
-    margin-top: -230px;
-  }
-  & h1 {
-    color: #9bd59b;
-  }
-  & .bigtext-line0, & .bigtext-line1, & .bigtext-line2, & .bigtext-line4 {
-    line-height: 70%;
-  }
-  & .bigtext-line0, & .bigtext-line1 {
-    &, span {
-      font-family: $header-font;
-    }
-  }
 }
 .tweet-bubble {
   position: relative;
@@ -784,10 +782,12 @@ footer.node__meta {
   display: none;
 }
 .ink-drop-cafe-wide-wrapper .RotatorScript a {
-  width: 100%;
-	&:first-child {
-	  display: none;
-	}
+  &, & img {
+    width: 100%;
+    &:first-child {
+      display: none;
+    }
+  }
 }
 @include breakpoint(lg) .ink-drop-cafe-tall-wrapper .RotatorScript {
   opacity: 0;
@@ -799,8 +799,8 @@ footer.node__meta {
   transition: all .35s;
 }
 @include breakpoint(lg) .ink-drop-cafe-wide-wrapper .RotatorScript a {
-	width: auto;
-	display: block;
+  width: auto;
+  display: block;
 }
 
 .ink-drop-cafe-tall-wrapper .RotatorScript.sticky {
@@ -833,16 +833,16 @@ footer.node__meta {
 }
 
 .slick--vertical .slick-dots {
-	postiion: absolute;
-	& li {
-	  width: 100px;
-		height: 100px;
-		border-radius: 50px;
-		-webkit-border-radius: 50px;
-		-moz-border-radius: 50px;
-		background: url(http://link-to-your/image.jpg) no-repeat;
-		box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-		-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-		-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  postiion: absolute;
+  & li {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    background: url(http://link-to-your/image.jpg) no-repeat;
+    box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
   }
 }
